--- a/configs/dataset/custom_detection.yml
+++ b/configs/dataset/custom_detection.yml
@@ -4,15 +4,15 @@ evaluator:
   type: CocoEvaluator
   iou_types: ['bbox', ]
 
-num_classes: 777 # your dataset classes
+num_classes: 1  # your dataset classes
 remap_mscoco_category: False
 
 train_dataloader:
   type: DataLoader
   dataset:
     type: CocoDetection
-    img_folder: /data/yourdataset/train
-    ann_file: /data/yourdataset/train/train.json
+    img_folder: /kaggle/input/sealcoco/yolov/train
+    ann_file: /kaggle/input/sealcoco/yolov/train/train_annotations.json
     return_masks: False
     transforms:
       type: Compose
@@ -28,8 +28,8 @@ val_dataloader:
   type: DataLoader
   dataset:
     type: CocoDetection
-    img_folder: /data/yourdataset/val
-    ann_file: /data/yourdataset/val/val.json
+    img_folder: /kaggle/input/sealcoco/yolov/val
+    ann_file: /kaggle/input/sealcoco/yolov/val/val_annotations.json
     return_masks: False
     transforms:
       type: Compose
