--- a/configs/dataset/coco_detection.yml
+++ b/configs/dataset/coco_detection.yml
@@ -4,15 +4,15 @@ evaluator:
   type: CocoEvaluator
   iou_types: ['bbox', ]
 
-num_classes: 80
-remap_mscoco_category: True
+num_classes: 1 
+remap_mscoco_category: False 
 
 train_dataloader: 
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: /datassd/COCO/train2017/
-    ann_file: /datassd/COCO/annotations/instances_train2017.json
+    img_folder: /kaggle/input/sealcoco/yolov/train
+    ann_file: /kaggle/input/sealcoco/yolov/train/train_annotations.json
     return_masks: False
     transforms:
       type: Compose
@@ -28,8 +28,8 @@ val_dataloader:
   type: DataLoader
   dataset: 
     type: CocoDetection
-    img_folder: /datassd/COCO/val2017/
-    ann_file: /datassd/COCO/annotations/instances_val2017.json
+    img_folder: /kaggle/input/sealcoco/yolov/val
+    ann_file: /kaggle/input/sealcoco/yolov/val/val_annotations.json
     return_masks: False
     transforms:
       type: Compose
